fix: handwriting z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 
-/* General */ 
+/* General */
 
 
 html, body {
@@ -117,7 +117,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
             transform: scale(1.3, 1.3);
 }
 
-.line-right, 
+.line-right,
 .line-left {
     width: 300px;
     border-bottom: 1px solid var(--main-brown);
@@ -134,6 +134,8 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 .handwtiting {
     font-family: 'Pinyon Script';
     font-size: 3rem;
+    position: relative;
+    z-index: 4;
     cursor: default;
 }
 
@@ -347,10 +349,10 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 .reviews__block {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
-    display: flex !important; 
-    -webkit-box-orient: vertical; 
-    -webkit-box-direction: normal; 
-        -ms-flex-direction: column; 
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
             flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -370,7 +372,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 .quote-bottom {
     bottom: -5%;
     right: 30%;
-    position: absolute; 
+    position: absolute;
     z-index: 10;
 }
 
@@ -381,7 +383,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 }
 
 .reviews__txt {
-    max-width: 50%;    
+    max-width: 50%;
     border: 1px solid var(--main-beige);
     padding: 20px;
     border-radius: 1px;
@@ -676,7 +678,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    
+
 }
 
 .main__click-content {
@@ -728,7 +730,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
     width: 100%;
     height: 100%;
     position: fixed;
-    top: 0; 
+    top: 0;
     left: 0;
     display: none;
     background: rgba(0, 0, 0, 0.5);
@@ -1009,7 +1011,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 
 
 
-@media screen and (max-width: 1024px) { 
+@media screen and (max-width: 1024px) {
     .container {
         max-width: 992px;
     }
@@ -1038,11 +1040,11 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
             -ms-flex-direction: column;
                 flex-direction: column;
     }
-    
+
     .about__slider {
         width: 100%;
     }
-    
+
     .about__slider p {
         margin-left: 0;
     }
@@ -1052,7 +1054,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
     }
 }
 
-@media screen and (max-width: 992px) { 
+@media screen and (max-width: 992px) {
 
     .container {
         max-width: 768px;
@@ -1103,7 +1105,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 
 }
 
-@media screen and (max-width: 768px) { 
+@media screen and (max-width: 768px) {
 
     .about {
         margin-top: 80px;
@@ -1112,7 +1114,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
     .container {
         max-width: 576px;
     }
-    
+
     html {
         font-size: 8px;
     }
@@ -1206,7 +1208,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
     }
 }
 
-@media screen and (max-width: 680px) { 
+@media screen and (max-width: 680px) {
     .tour__img {
         width: 100%;
     }
@@ -1285,7 +1287,7 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 
     .line-right, .line-left {
         width: 80px;
-    } 
+    }
 
     .about__slider-body {
         padding: 10px 10px 20px 10px;
@@ -1388,13 +1390,13 @@ a, h1, p, li, ul, h1, h2, h3, h4, div, h5, h6 {
 
 }
 
-@media screen and (max-width: 472px) and (max-height: 700px) { 
+@media screen and (max-width: 472px) and (max-height: 700px) {
     .main__who-body {
         margin-top: 100px;
     }
 }
 
-@media screen and (max-width: 681px) { 
+@media screen and (max-width: 681px) {
     .tour__imgs {
         flex-direction: column;
     }
